--- a/docs/c-1计算机网络.md
+++ b/docs/c-1计算机网络.md
@@ -19,6 +19,7 @@ epoll的高效就在于，当我们调用epoll_ctl往里塞入百万个句柄时
 这件事怎么做到的呢？当一个socket句柄上有事件时，内核会把该句柄插入上面所说的准备就绪list链表，这时我们调用epoll_wait，会把准备就绪的socket拷贝到用户态内存，然后清空准备就绪list链表，最后，epoll_wait干了件事，就是检查这些socket，如果不是ET模式（就是LT模式的句柄了），并且这些socket上确实有未处理的事件时，又把该句柄放回到刚刚清空的准备就绪链表了。所以，非ET的句柄，只要它上面还有事件，epoll_wait每次都会返回。而ET模式的句柄，除非有新中断到，即使socket上的事件没有处理完，也是不会次次从epoll_wait返回的。
 
 ####实例代码
+```c
 define MAX_EVENTS 10
 int main() {
 	struct epoll_event ev, events[MAX_EVENTS];
@@ -69,5 +70,65 @@ int main() {
 	}
 	return 0;
 }
-####
+```
+
+#2.三次握手，四次挥手
+![](figure/threehands.jpg)
+![](figure/fourhands.jpg)
+##2.1 close_wait过多的原因
+close_wait 按照正常操作的话应该很短暂的一个状态，接收到客户端的fin包并且回复客户端ack之后，会继续发送fin包告知客户端关闭关闭连接，之后迁移到Last_ACK状态。但是close_wait过多只能说明没有迁移到Last_ACK，也就是服务端是否发送fin包，只有发送fin包才会发生迁移，所以问题定位在是否发送fin包。fin包的底层实现其实就是调用socket的close方法，这里的问题出在没有执行close方法。说明服务端socket忙于读写。
+
+
+CLOSE_WAIT是被动关闭连接时形成的。根据TCP状态机，服务器端收到客户端发送的FIN，则按照TCP实现发送ACK，因此进入CLOSE_WAIT状态。但如果服务器端不执行close()，就不能由CLOSE_WAIT迁移到LAST_ACK，则系统中会存在很多CLOSE_WAIT状态的连接。此时，可能是系统忙于处理读、写操作，而未将已收到FIN的连接，进行close。此时，recv/read已收到FIN的连接socket，会返回0。
+
+##2.2 TIME_WAIT 和CLOSE_WAIT状态socket过多
+如果服务器出了异常，百分之八九十都是下面两种情况：
+
+1.服务器保持了大量TIME_WAIT状态
+
+2.服务器保持了大量CLOSE_WAIT状态，简单来说CLOSE_WAIT数目过大是由于被动关闭连接处理不当导致的。
+
+因为linux分配给一个用户的文件句柄是有限的，而TIME_WAIT和CLOSE_WAIT两种状态如果一直被保持，那么意味着对应数目的通道就一直被占着，而且是“占着茅坑不使劲”，一旦达到句柄数上限，新的请求就无法被处理了，接着就是大量Too Many Open Files异常，Tomcat崩溃。
+
+##2.3 为什么 TIME_WAIT 状态需要保持 2MSL 这么长的时间？
+
+如果 TIME_WAIT 状态保持时间不足够长(比如小于2MSL)，第一个连接就正常终止了。第二个拥有相同相关五元组的连接出现，而第一个连接的重复报文到达，干扰了第二个连接。TCP实现必须防止某个连接的重复报文在连接终止后出现，所以让TIME_WAIT状态保持时间足够长(2MSL)，连接相应方向上的TCP报文要么完全响应完毕，要么被 丢弃。建立第二个连接的时候，不会混淆。
+
+1.为了防止最后一个ACK没有送到服务端，如果客户端立即关闭的话，服务端会重新发fin包，这时客户端关闭，服务端会收到RST，也就是一个报错
+2.为了防止当前连接中的重复报文干扰下一个连接
+
+# 3. HTTP1.0 1.1 2.0的区别
+##3.1HTTP1.0 HTTP 1.1主要区别
+（1）长连接
+
+HTTP 1.0需要使用keep-alive参数来告知服务器端要建立一个长连接，而HTTP1.1默认支持长连接。
+
+HTTP是基于TCP/IP协议的，创建一个TCP连接是需要经过三次握手的,有一定的开销，如果每次通讯都要重新建立连接的话，对性能有影响。因此最好能维持一个长连接，可以用个长连接来发多个请求。
+
+（2）节约带宽
+
+HTTP 1.1支持只发送header信息(不带任何body信息)，如果服务器认为客户端有权限请求服务器，则返回100，否则返回401。客户端如果接受到100，才开始把请求body发送到服务器。
+
+这样当服务器返回401的时候，客户端就可以不用发送请求body了，节约了带宽。
+
+另外HTTP还支持传送内容的一部分。这样当客户端已经有一部分的资源后，只需要跟服务器请求另外的部分资源即可。这是支持文件断点续传的基础。
+
+（3) HOST域
+
+##3.2HTTP1.1 HTTP 2.0主要区别
+(1)多路复用
+
+HTTP2.0使用了多路复用的技术，做到同一个连接并发处理多个请求，而且并发请求的数量比HTTP1.1大了好几个数量级。
+
+当然HTTP1.1也可以多建立几个TCP连接，来支持处理更多并发的请求，但是创建TCP连接本身也是有开销的。
+
+TCP连接有一个预热和保护的过程，先检查数据是否传送成功，一旦成功过，则慢慢加大传输速度。因此对应瞬时并发的连接，服务器的响应就会变慢。所以最好能使用一个建立好的连接，并且这个连接可以支持瞬时并发的请求。
+
+![](figure/http.png)
+这个图可以很清楚的看出，1.0是一个请求 就连接 然后 断开连接， 1.1是一个连接 可以对应多个请求，但是请求是有顺序的，第二个请求必须等第一个请求结束才可以发送， 2.0是 client 端就可以在一个链接中并发地发起多个请求，每个请求及该请求的响应不需要等待其他的请求。
+
+(2)数据压缩
+
+(3)服务器推送
+https://blog.csdn.net/linsongbin1/article/details/54980801?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.channel_param&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.channel_param
 
