--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -79,6 +79,21 @@ https://www.jianshu.com/p/b036dda3f5c8
 
 ### 3. redis分布式锁，解锁的注意事项。
 
+首先，为了确保分布式锁可用，我们至少要确保锁的实现同时满足以下四个条件：
+
+1. 互斥性。在任意时刻，只有一个客户端能持有锁。
+2. 不会发生死锁。即使有一个客户端在持有锁的期间崩溃而没有主动解锁，也能保证后续其他客户端能加锁。
+3. 具有容错性。只要大部分的Redis节点正常运行，客户端就可以加锁和解锁。
+4. 解铃还须系铃人。加锁和解锁必须是同一个客户端，客户端自己不能把别人加的锁给解了。
+
+比较好的实现：
+https://blog.csdn.net/kongmin_123/article/details/82080962?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-4.channel_param&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-4.channel_param
+1. set 和 expire 保证原子性。
+2. 可以在加锁的时候把当前的线程ID当做value，并在删除之前验证key对应的value是不是自己线程的ID。这样做又隐含了一个新的问题，判断和释放锁是两个独立操作，不是原子性的。
+要想实现验证和删除过程的原子性，可以使用Lua脚本来实现。这样就能保证验证和删除过程的正确性了。
+
+
+redis分布式锁的key可以分段来加，提高并发。
 ### 4. redis主从复制，哨兵，集群。
 redis主从过程
 ![](figure/redismasterslave.png)
@@ -138,6 +153,12 @@ https://github.com/Snailclimb/JavaGuide/blob/master/docs/database/Redis/redis-co
 
 ### 6. epoll的两种模式 -- 水平和边沿
 
+LT:level trigger, 水平触发模式  ET:edge trigger, 边缘触发模式相同点
+
+两种模式LT和ET：最后看看epoll独有的两种模式LT和ET。无论是LT和ET模式，都适用于以上所说的流程。区别是，LT模式下，只要一个句柄上的事件一次没有处理完，会在以后调用epoll_wait时次次返回这个句柄，而ET模式仅在第一次返回。
+这件事怎么做到的呢？当一个socket句柄上有事件时，内核会把该句柄插入上面所说的准备就绪list链表，这时我们调用epoll_wait，会把准备就绪的socket拷贝到用户态内存，然后清空准备就绪list链表，最后，epoll_wait干了件事，就是检查这些socket，如果是LT模式，并且这些socket上确实有未处理的事件时，又把该句柄放回到刚刚清空的准备就绪链表了。所以，LT的句柄，只要它上面还有事件，epoll_wait每次都会返回。而ET模式的句柄，除非有新中断到，即使socket上的事件没有处理完，也是不会次次从epoll_wait返回的。
+
+
 ### 7. hashmap中如何判断两个对象相同。
 先判断hashcode相同不，不相同肯定不是一个。相同的话，再判断equals。
 不同对象可能会有相同的hashcode，哈希冲突。 如何判断是究竟是两个逻辑相等的对象重复写入，还是两个逻辑不等的对象出现了哈希冲突呢？
@@ -146,3 +167,5 @@ https://github.com/Snailclimb/JavaGuide/blob/master/docs/database/Redis/redis-co
 ### 8.线程池有哪些参数，执行流程是怎样的？有哪些常用 BlockingQueue，区别是什么？拒绝策略有哪些？shutdown() 和 shutdownNow() 有什么区别？
 
 ### 9. synchronized 和 ReentrantLock 区别？ReentrantLock 实现原理，AQS 原理，CountdownLatch 和 Semaphore 的作用？
+
+### 10. 说一说在浏览器中输入一个url后，直到浏览器显示页面的过程中发生了什么？
