--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -27,6 +27,10 @@ Cookie 数据保存在客户端(浏览器端)，Session 数据保存在服务器
 - 为什么要调用start方法而不是run方法？
     - 调⽤ start ⽅法⽅可启动线程并使线程进⼊就绪状态，⽽ run ⽅法只是 thread 的⼀个普通⽅法调⽤，还是在主线程⾥执⾏。
 
+- 线程池一些参数：
+    - corePoolSize: 规定线程池有几个线程(worker)在运行。
+    - QUEUE_CAPACITY 队列容量
+    - maximumPoolSize: 当workQueue满了,不能添加任务的时候，这个参数才会生效。规定线程池最多只能有多少个线程(worker)在执行。
 # 3.影响一个Http服务最大连接数的因素是什么
 文件句柄限制:  
 执行 ulimit -n 输出 1024，说明对于一个进程而言最多只能打开1024个文件，所以你要采用此默认配置最多也就可以并发上千个TCP连接。
