--- a/docs/牛客上的面经.md
+++ b/docs/牛客上的面经.md
@@ -236,3 +236,205 @@
     id是auto_increment的，多个事务同时插入数据，为什么能保证id不被重复分配呢？
     现在有这样一个需求，用户消费后需要生成订单号，我们希望这个订单号是不唯一的。并且这会涉及很高的并发量，同时需要有很好的性能，你要怎么设计这个系统？
     算法题，链表循环右移动k位置，例如1->2->3->4->5，k=2，结果为4->5->1->2->3
+    
+# 6. 美团一面
+
+    作者：肥宅快乐王
+    链接：https://www.nowcoder.com/discuss/480149?type=2&order=3&pos=2&page=1&channel=666&source_id=discuss_tag
+    来源：牛客网
+    
+    笔试最后一题不会，面试通知打了两个电话没接，回拨约到一个礼拜之后了。面经如下：
+    
+    秒杀项目。
+    
+    简单介绍demo。
+    
+    流量压测。
+    
+    JMeter。
+    
+    为什么用Redis。
+    
+    抗高并发。
+    
+    数据库优化。
+    
+    引擎，缓存，索引，分库分表，主从复制，读写分离，备份容灾。
+    
+    索引原理
+    
+    B+树。
+    
+    为什么B+而不是红黑。
+    
+    B+树矮胖。
+    
+    事务ACID。
+    
+    原子性（undo log），一致性，隔离性（锁和MVCC），持久性（redo log）。
+    
+    分布式相关一致性理论。
+    
+    Paxos,2pc,3pc
+    
+    2pc过程。
+    
+    提交请求，提交。多嘴提了Zookeeper的2pc，半数和所有搞混了。
+    
+    2pc缺点。
+    
+    阻塞，单点。
+    
+    nosql 。
+    
+    redis，hbase，monodb。
+    
+    redis常见的数据结构。
+    
+    string，hash，set，zet，list。
+    
+    过期策略
+    
+    定时，惰性，定期。
+    
+    lru,lfu区别。
+    
+    最近最久未使用，最近最少。
+    
+    缓存双写一致。
+    
+    库更，缓更；库更，缓删；缓删，库更。
+    
+    数据挖掘的难点
+    
+    blabla。
+    
+    流式框架Storm，Spark，Flink区别。
+    
+    不会。
+    
+    MapReduce
+    
+    用于大数据计算的编程模型。
+    
+    Spark流程。
+    
+    RDD，分片计算，整合。
+    
+    七层网络
+    
+    物，数，网，传，会，表，应。
+    
+    TCP,UDP区别。
+    
+    略。
+    
+    TCP写过代码吗。
+    
+    没。
+    
+    如何编程通过TCP传播。
+    
+    答了socket，不会。
+    
+    TCP四挥。
+    
+    略。
+    
+    time wait状态做什么。
+    
+    等待两个最大报文存活时间应该是还有数据传输，不清楚。
+    
+    保活。
+    
+    检测连接是否断掉。
+    
+    TCP两种关闭的方式
+    
+    四挥，reset。
+    
+    应用层协议
+    
+    smtp，pop，http。
+    
+    http协议组成
+    
+    答了请求体，响应体忘了。
+    
+    状态码
+    
+    1继续，2正常，3重定向，4客户端错误，5服务端错误
+    
+    301和302区别。
+    
+    不会。
+    
+    cookie和session的区别。
+    
+    略。
+    
+    http和https的区别。
+    
+    略。
+    
+    linux查看线程。
+    
+    ps
+    
+    cpu利用率和cpu load。
+    
+    不会。
+    
+    死锁。
+    
+    说了四个条件和解决方法。
+    
+    线程死锁的状态。
+    
+    阻塞。
+    
+    NIO，BIO
+    
+    略。
+    
+    设计模式和架构，MVC了解吗。
+    
+    说了Spring MVC，谈了DispatcherServelet责任链和HandleAdapter适配器。
+    
+    策略模式。
+    
+    条件不同，策略不同。
+    
+    六大设计原则。
+    
+    只记得单一职责原则。
+    
+    python，c++了解吗
+    
+    python学过，刷题水平。
+    
+    非计算机专业的学了啥，课程什么的。
+    
+    本科学过，B站嫖过。
+    
+    常见的算法，动态规划。
+    
+    刷题（面试官不满意），答了边界条件和状态转移方程。
+    
+    计算机组成原理。
+    
+    本科学的（现在不会）。
+    
+    看什么书。
+    
+    微服务相关。
+    
+    六边形架构。
+    
+    Star platinum。看的五大组件，问架构我傻了。
+    
+    你有什么问题要问我吗？
+    
+    美团加速包有用吗。有用。
+    
+    伙食。有大厦
