--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -200,6 +200,18 @@ Java里的集合啊，mysql的索引啊。
         - https://blog.csdn.net/zl1zl2zl3/article/details/88321108
         
     - LSM Tree
+        - https://blog.csdn.net/mingyuezh/article/details/80839868
+        - 面试回答：
+            - 比如说 随机插入数据，或者随机读取数据， b+树随机磁盘io浪费资源。
+            而lsm树可以顺序写入内存中，然后刷到磁盘上，写效率很高。读的时候，依靠内存命中率，内存读不到，去各个小树找，各个小树有序，
+            不断的合并这些小树。
+        - lsm tree牺牲部分读性能，而大幅度提高写性能。 读多写少b+树，因为大量写大量随机io要分裂树节点。 写多lsm tree，内存中写，非常块。
+        - 原理是把一颗大树拆分成N棵小树， 它首先写入到内存中（内存没有寻道速度的问题，随机写的性能得到大幅提升），在内存中构建一颗有序小树，随着小树越来越大，内存的小树会flush到磁盘上。当读时，由于不知道数据在哪棵小树上，因此必须遍历所有的小树，但在每颗小树内部数据是有序的。
+
+        - 以上就是LSM树最本质的原理，有了原理，再看具体的技术就很简单了。
+            - 1）首先说说为什么要有WAL（Write Ahead Log），很简单，因为数据是先写到内存中，如果断电，内存中的数据会丢失，因此为了保护内存中的数据，需要在磁盘上先记录logfile，当内存中的数据flush到磁盘上时，就可以抛弃相应的Logfile。
+            - 2）什么是memstore, storefile？很简单，上面说过，LSM树就是一堆小树，在内存中的小树即memstore，每次flush，内存中的memstore变成磁盘上一个新的storefile。
+            - 3）为什么会有compact？很简单，随着小树越来越多，读的性能会越来越差，因此需要在适当的时候，对磁盘中的小树进行merge，多棵小树变成一颗大树。
 - 2.Treemap是什么实现的？  --红黑树，所以添加，删除，查找效率都比HashMap低，但是key有序。
 - 3.其他能够实现红黑树特性的数据结构？ -- 跳表
     - Skip List主要思想是将链表与二分查找相结合，以空间换时间
@@ -288,3 +300,74 @@ Java里的集合啊，mysql的索引啊。
     - Es分布式的，查一条数据，数据可能在不同的节点上，es如何处理。
     - 归并排序，对所有分片读到 查询节点的 5000 10，做归并排序查询。
 
+# 3. 美团二面
+1.	算法题：
+数组里找到第m小的元素，并打印出来
+在n个数字里随机的选出m个数，这m个数字不可以重复。任何一个数字只能选中1次。1 2 3 4 5 里面数字1只能选1次。
+一段文本中，输入一个文本串，输出最长重复子串。 后缀树？前缀树？
+2．两个进程，c语言对地址进行赋值，是逻辑地址吧？  是的
+3. 进程内存隔离吗？ 不同进程内存隔离，为什么又有共享内存呢？怎么做到既可以隔离又可以共享？
+   - 虚拟内存让进程认为自己独有一段连续的空间，页表将俩块逻辑地址映射到同一块物理地址，就共享内存了。
+4. Mmu是什么？
+    - CPU访问地址是向MMU发送地址，然后从MMU获得数据，虚拟地址经过MMU转化为物理地址，从而访问外部内存里的数据。
+    - MMU就是将逻辑地址查页表，然后返回物理地址。
+5. 内存映射 段式，页式？
+    - 共享内存可以通过mmap()映射普通文件机制实现
+6. TCP协议，可靠，是说发了一个之后，接收端一定能收到吗？会有收不到的情况吗？
+    - 可靠，指 发送发的 一定和接收端接受的一样。按序，完整的收到。
+    - 收不到 就超时重传
+7. 可能是什么原因没有收到第一次发的数据包呢？
+    - 丢包
+    - 接收方由于缓存溢出，导致无法再处理到来的数据包了，直接丢弃从而造成丢包
+    - 网络拥塞导致数据包丢包
+    - 数据包被检测到损坏了，被接收方丢弃造成了丢包
+8. 丢包可能会在哪个地方丢？怎么丢？为什么会丢包？
+    - 网络链接阻塞
+    - 路由器设备性能
+    https://blog.csdn.net/duandianR/article/details/77513506
+9. ip层为啥会丢包？
+    - 不可靠呀
+10． 路由器那块是不是可能也会丢？
+    - 会
+11. 路由器为什么会丢？
+    - 网络设备cpu或者内存满了，来不及出来，丢
+12. 可靠表现在哪些方面？
+13. 拥塞控制怎么保证可靠性？
+14. select * from student where age>18 and score=90 order by ip
+(score, age) 这个索引， 那这个语句会用到索引吗？
+
+# 4. 腾讯二面
+1. LSM树和b+树的区别？
+    - 比如说 随机插入数据，或者随机读取数据， b+树随机磁盘io浪费资源。
+    而lsm树可以顺序写入内存中，然后刷到磁盘上，写效率很高。读的时候，依靠内存命中率，内存读不到，去各个小树找，各个小树有序，
+    不断的合并这些小树。
+2. 介绍下秒杀系统，哪里最难
+    - 秒杀接口，要限流，缓存，异步
+3. 秒杀场景Redis和mysql数据同步
+    - 这种业务场景，不需要数据一致，都在redis里操作
+4. Redis挂了怎么办
+    - 主从，集群，高可用
+5. 异步一般通过什么方式来实现？
+6. 多线程，进程内的线程，如何传递消息？  有数据了，通过对方去拿数据？
+
+7. 多个线程能够在某一个时刻可以同时触发。
+
+8. Zset的业务场景，
+
+9. Kafka的分区选多少个分区？
+
+10. Kafka如何高可用，保证机器挂了数据不会丢失。
+
+11. Kafka怎么保证，写的数据能够到replica里？
+
+12. 平时通过什么学习新知识？
+
+13. 平时学习工作中接触到一个新的概念，通过什么方式去上手学习。
+
+14.	有没有看过一些源码？
+
+15.	有去阅读过一些技术介绍的书吗？
+
+16.	举个例子，最近看的书？
+
+17.	对以后的职业规划？
