ab同时互相转账死锁

--- a/docs/c-3算法.md
+++ b/docs/c-3算法.md
@@ -31,3 +31,14 @@
                 quickSort(nums, l+1, right)
             quickSort(nums, 0, len(nums)-1)
             return nums
+
+# 2. 两个很长数组的中位数，两个有序数组的中位数和topK问题
+https://blog.csdn.net/hk2291976/article/details/51107778
+
+# 3. 在一个大文件中有100亿个32位整数，乱序排列，要求找出中位数；内存限制为512M；请写出算法设计思路；
+- 一个有符号的32位整数的取值范围是[-2^31, 2^31-1]，总共有4294967296个取值，因此我们将它划分成100000组，即43000个数映射到一个组，将a1的区间[-2^31，-2^31+43000)，a2的区间[-2^31+43000，-2^31+86000)......一直到a100000的区间；
+
+- 100亿个数分成100组，每组一亿个数，映射到区间上。这样可以找到50亿落在哪个区间。比如落在了 [-2^31+..., ...]
+算出前面区间有多少个数，比如49.5亿，那在[-2^31+..., ...]这个区间找到0.5亿就可以了。再次重新遍历100组，每组1亿个数，看是否在这个区间上。在这个区间上，这个区间分的细一点，比如 [-2^31+4999999, -2^31+5000000]，算出每个数都出现了多少次，找到第0.5亿的位置。
+
+-   如果是数据流，怎么办？
