--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -5,6 +5,12 @@
 
     - 线程等待时间所占比例越高，需要越多线程。线程CPU时间所占比例越高，需要越少线程。
 
+- 协程可以利用多核吗？
+    - 1.协程的切换开销更小，属于程序级别的切换，操作系统完全感知不到，因而更加轻量级 　
+    - 2.单线程内就可以实现并发的效果，最大限度地利用cpu
+　  
+    - 1.协程的本质是单线程下，无法利用多核，可以是一个程序开启多个进程，每个进程内开启多个线程，每个线程内开启协程
+　　
 - 为什么内存比磁盘块？
     - 存储原理完全不同，内存（随机存储器）依靠电脉冲 配合CPU的直接寻址寄存器 机械硬盘需要机械指针寻找需要的盘面和扇区
 
@@ -52,3 +58,5 @@
 
 - id是auto_increment的，多个事务同时插入数据，为什么能保证id不被重复分配呢？
     主键索引创建的时候已经是唯一性索引了
+    
+    
