--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -349,16 +349,27 @@ Java里的集合啊，mysql的索引啊。
     - 主从，集群，高可用
 5. 异步一般通过什么方式来实现？
 6. 多线程，进程内的线程，如何传递消息？  有数据了，通过对方去拿数据？
+    - 全局变量 wait notify
 
 7. 多个线程能够在某一个时刻可以同时触发。
-
+    - CyclicBarrier （适用在多线程相互等待，直到到达一个屏障点。
+    - CountDownLatch 实现，CountDownLatch可以理解为一个计数器，直到计数器为0了，等待的线程才执行。
+    - https://www.jianshu.com/p/892aa4af8b8e
 8. Zset的业务场景，
-
+    - 游戏排名、微博热点话题
 9. Kafka的分区选多少个分区？
+    - kafka分区过多的缺点？
+    - https://www.cnblogs.com/chong-zuo3322/p/13523525.html
+    - 文件句柄开销大
+        - 每个分区在底层文件系统都有属于自己的一个目录。该目录下通常会有两个文件： base_offset.log和base_offset.index。Kafak的controller和ReplicaManager会为每个broker都保存这两个文件句柄(file handler)。很明显，如果分区数越多，所需要保持打开状态的文件句柄数也就越多，最终可能会突破你的ulimit -n的限制。
+    
+    - 降低高可用性
+        - Kafka通过副本(replica)机制来保证高可用。具体做法就是为每个分区保存若干个副本(replica_factor指定副本数)。每个副本保存在不同的broker上。
 
 10. Kafka如何高可用，保证机器挂了数据不会丢失。
-
+    - Kafka通过副本(replica)机制来保证高可用。具体做法就是为每个分区保存若干个副本(replica_factor指定副本数)。每个副本保存在不同的broker上。期中的一个副本充当leader 副本，负责处理producer和consumer请求。其他副本充当follower角色，由Kafka controller负责保证与leader的同步。如果leader所在的broker挂掉了，contorller会检测到然后在zookeeper的帮助下重选出新的leader
 11. Kafka怎么保证，写的数据能够到replica里？
+    - Follower在收到该消息并写入其Log后，向Leader发送ACK。一旦Leader收到了ISR中的所有Replica的ACK，该消息就被认为已经commit了，Leader将增加HW并且向Producer发送ACK。
 
 12. 平时通过什么学习新知识？
 
