面经 and 2pc 3pc tcc

--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -350,6 +350,8 @@ Java里的集合啊，mysql的索引啊。
 5. 异步一般通过什么方式来实现？
 6. 多线程，进程内的线程，如何传递消息？  有数据了，通过对方去拿数据？
     - 全局变量 wait notify
+    
+- wait notify 底层？
 
 7. 多个线程能够在某一个时刻可以同时触发。
     - CyclicBarrier （适用在多线程相互等待，直到到达一个屏障点。
