--- a/docs/牛客上的面经.md
+++ b/docs/牛客上的面经.md
@@ -438,3 +438,60 @@
     美团加速包有用吗。有用。
     
     伙食。有大厦
+    
+    
+# 一个大佬的面经
+    作者：qq18457852
+链接：https://www.nowcoder.com/discuss/481446?type=2&order=3&pos=6&page=1&channel=666&source_id=discuss_tag
+    来源：牛客网
+    
+    wxg c++
+    集群限流，单机限流
+    网关预热
+    服务下线对业务的影响
+    分布式缓存，本地缓存
+    redis集群高可用
+    一致性哈希，负载均衡，数据倾斜，paxos，虚拟哈希槽
+    /dev /proc里面是啥
+    排查占用内存最多的进程
+    多进程多线程多协程
+    https过程
+    epoll原理
+    虚表，虚函数，虚析构函数
+    虚拟内存
+    mysql索引，慢查询分析，什么时候不走索引，索引结构
+    awk NF NR干啥的
+    大文件统计问题
+    
+    百度搜索架构 c++
+    服务聚合，定时刷缓存
+    进程线程协程
+    协程设计，调度器，协程怎么自己调度不用调度器，调度器怎么通知协程，协程切换保存哪些东西
+    线程同步和互斥，怎么用
+    epoll原理，用法，网卡，dma，内核切换，io
+    设计一个tail命令
+    文件指针，文件io
+    c++虚函数原理，虚析构作用
+    前序中序还原二叉树
+    
+    
+    快手java
+    rpc原理
+    epoll原理，为什么epoll et用非阻塞io
+    redis优势
+    链表减法
+    
+    京东 java
+    限流怎么做的，单机，集群
+    服务qps多高
+    分布式配置中心，怎么做动态开关，怎么通知到节点
+    怎么反爬防刷，有没有硬件限流
+    gc算法
+    hashmap concurenthashmap
+    
+    猿辅导C++
+    rpc和http比
+    http2.0
+    mq和rpc
+    进程线程
+    蛇形数组打印
