--- a/docs/z1-场景题.md
+++ b/docs/z1-场景题.md
@@ -22,3 +22,14 @@
     - 4）降低隔离级别。如果业务允许，将隔离级别调低也是较好的选择，比如将隔离级别从RR调整为RC，可以避免掉很多因为gap锁造成的死锁。
 
     - 5）为表添加合理的索引。如果不走索引将会为表的每一行记录添加上锁，死锁的概率大大增大。
+    
+# 3.俩个文件,每个文件十亿个URL ,找到重复的URL ,设计方案
+答： 将这两个文件hash到10个或者更多个小文件中。 再在每个小文件中找重复的url。
+题目二、某搜索公司一天的用户搜索词汇是海量的百亿数据量，请设计一种求出每天最热top 100 词汇的可行办法。
+将这个百亿数据hash到很多个小文件中，然后每个小文件维护一个100的大根堆，最后把这些文件的大根堆一起来进行比较。找到最终的100个top。
+
+题目三：求100亿个数的中位数
+https://blog.csdn.net/MOU_IT/article/details/88586193
+1.	内存放得下 直接堆或者快排
+2.	内存放不下 数的范围是0-2^32-1 40亿  可以用一个2^32 40亿个桶来保存 累加到50亿
+3.	如果4GB都没有  那就多分几个范围内的桶 每个桶保存10个数 那就有4亿个区间. 整个过程需要遍历100亿个数两次，第一次确定第50亿个数所落在的索引区间，第二次确定第50亿个数所落在的索引。区间大小是一个可以优化的值，优化之后可以使得I/O的次数最少。
