--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -60,4 +60,21 @@
     主键索引创建的时候已经是唯一性索引了
     
 
-- 单机限流，分布式限流
+- 单机限流，分布式限流？？？
+
+- synchronized和lock区别，lock的过程，在没获取到锁的时候是什么状态？？
+
+- rand5生成rand7
+    - num=5*（rand5-1）+rand5-1
+
+    if(num<21)
+    
+    print num%7+1;
+    
+    其中5*（rand5-1）生成等概率的数0,5,10,15,20，而后面的rand5-1生成等概率的0,1,2,3,4
+    
+    这样两个数相加，就可以得到等概率的0-24.
+    
+    这个时候取0-20就可以等概率的区分，rand7的每个数字在这其中出现了3次，概率相等。
+
+- https://www.cnblogs.com/cangqinglang/p/13201388.html 很全的输入url后怎么到服务端的
