--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -300,7 +300,7 @@ Java里的集合啊，mysql的索引啊。
     - Es分布式的，查一条数据，数据可能在不同的节点上，es如何处理。
     - 归并排序，对所有分片读到 查询节点的 5000 10，做归并排序查询。
 
-# 3. 美团二面
+# 3. 美团二面 8.18
 1.	算法题：
 数组里找到第m小的元素，并打印出来
 在n个数字里随机的选出m个数，这m个数字不可以重复。任何一个数字只能选中1次。1 2 3 4 5 里面数字1只能选1次。
@@ -336,7 +336,7 @@ Java里的集合啊，mysql的索引啊。
 14. select * from student where age>18 and score=90 order by ip
 (score, age) 这个索引， 那这个语句会用到索引吗？
 
-# 4. 腾讯二面
+# 4. 腾讯二面  8.18
 1. LSM树和b+树的区别？
     - 比如说 随机插入数据，或者随机读取数据， b+树随机磁盘io浪费资源。
     而lsm树可以顺序写入内存中，然后刷到磁盘上，写效率很高。读的时候，依靠内存命中率，内存读不到，去各个小树找，各个小树有序，
@@ -373,6 +373,8 @@ Java里的集合啊，mysql的索引啊。
 11. Kafka怎么保证，写的数据能够到replica里？
     - Follower在收到该消息并写入其Log后，向Leader发送ACK。一旦Leader收到了ISR中的所有Replica的ACK，该消息就被认为已经commit了，Leader将增加HW并且向Producer发送ACK。
 
+12. oauth2单点登陆？
+![](figure/oauth2.png)
 12. 平时通过什么学习新知识？
 
 13. 平时学习工作中接触到一个新的概念，通过什么方式去上手学习。
@@ -384,3 +386,242 @@ Java里的集合啊，mysql的索引啊。
 16.	举个例子，最近看的书？
 
 17.	对以后的职业规划？
+
+
+# 5. 腾讯科恩实验室 2.25
+- 索引为什么不多用？
+   - 在表上建立的每个索引都会增加存储开销，索引对于插入、删除、更新操作，会导致b+树结构的变化，也会增加处理上的开销。
+- git撤回命令 ？
+    - git checkout切换分支 git merge, git pull, git push, git reset撤回提交
+- docker compose。 5 自我介绍 慢点说 别着急。 
+- jwt的优点？
+    - jwt是一个字符串，（json web token） 发起http请求时 将它放入headers或者url中。这样可以保证传递的数据被篡改时能被我们发现，保证安全性。jwt由三部分组成 header+payload+signature
+- 单点登陆
+    - 在多个应用系统中，只需要登录一次，就可以访问其他相互信任的应用系统。
+    - ![](figure/sso.png)
+- restful是啥啊？ 
+    - RESTful是一种架构的规范与约束、原则，符合这种规范的架构就是RESTful架构。get|post  project /
+- socket服务端和客户端通信过程
+- get post区别 
+    - （1) 参数位置  url/ 实体 （2) get幂等操作， 不改变状态。， post上传数据可能存到数据库中 改变了状态。
+- 主键和索引？
+    - 主键一定是唯一性索引，唯一性索引并不一定就是主键。  一个表中可以有多个唯一性索引，但只能有一个主键。 主键列不允许空值，而唯一性索引列允许空值。 索引可以提高查询的速度。 
+主键和索引都是键，不过主键是逻辑键，索引是物理键，意思就是主键不实际存在，而索引实际存在在数据库中
+- 什么是联合索引 最左前缀原则 多个单列索引和联合索引？
+    - 两个或更多个列上的索引被称作联合索引，联合索引又叫复合索引。对于复合索引:Mysql从左到右的使用索引中的字段，一个查询可以只使用索引中的一部份，但只能是最左侧部分。例如索引是key index (a,b,c). 可以支持a | a,b| a,b,c 3种组合进行查找，但不支持 b,c进行查找 
+如果您知道姓，电话簿将非常有用；如果您知道姓和名，电话簿则更为有用，但如果您只知道名不姓，电话簿将没有用处。
+所以说创建复合索引时，应该仔细考虑列的顺序。对索引中的所有列执行搜索或仅对前几列执行搜索时，复合索引非常有用；仅对后面的任意列执行搜索时，复合索引则没有用处。
+多个单列索引在多条件查询时优化器会选择最优索引策略，可能只用一个索引，也可能将多个索引全用上！ 但多个单列索引底层会建立多个B+索引树，比较占用空间，也会浪费一定搜索效率，故如果只有多条件联合查询时最好建联合索引！
+联合索引本质：
+当创建**(a,b,c)联合索引时，相当于创建了(a)单列索引**，(a,b)联合索引以及**(a,b,c)联合索引**
+
+- 主键 外键？
+    - 外键用于与另一张表的关联。是能确定另一张表记录的字段，用于保持数据的一致性。
+    - 用外键能够最大程度的保持数据的一致性和完整性。
+    - 不用外键时数据管理简单，操作方便，性能高（导入导出等操作，在insert, update, delete 数据的时候更快）eg:在海量的数据库中想都不要去想外键，试想，一个程序每天要insert数百万条记录，当存在外键约束的时候，每次要去扫描此记录是否合格，一般还不止一个字段有外键，这样扫描的数量是成级数的增长！我的一个程序入库在3个小时做完，如果加上外键，需要28个小时！
+
+- 乐观锁 悲观锁 及其应用场景?
+    - 读用乐观锁，写用悲观锁。
+    - 乐观锁
+乐观锁不是数据库自带的，需要我们自己去实现。乐观锁是指操作数据库时(更新操作)，想法很乐观，认为这次的操作不会导致冲突，在操作数据时，并不进行任何其他的特殊处理（也就是不加锁），而在进行更新后，再去判断是否有冲突了。
+通常实现是这样的：在表中的数据进行操作时(更新)，先给数据表加一个版本(version)字段，每操作一次，将那条记录的版本号加1。也就是先查询出那条记录，获取出version字段,如果要对那条记录进行操作(更新),则先判断此刻version的值是否与刚刚查询出来时的version的值相等，如果相等，则说明这段期间，没有其他程序对其进行操作，则可以执行更新，将version字段的值加1；如果更新时发现此刻的version值与刚刚获取出来的version的值不相等，则说明这段期间已经有其他程序对其进行操作了，则不进行更新操作。
+乐观锁只是在更新数据那一刻锁表，其他事件不锁表。
+    - 悲观锁
+数据库默认就是悲观锁
+与乐观锁相对应的就是悲观锁了。悲观锁就是在操作数据时，认为此操作会出现数据冲突，所以在进行每次操作时都要通过获取锁才能进行对相同数据的操作，这点跟java中的synchronized很相似，所以悲观锁需要耗费较多的时间。另外与乐观锁相对应的，悲观锁是由数据库自己实现了的，要用的时候，我们直接调用数据库的相关语句就可以了。
+说到这里，由悲观锁涉及到的另外两个锁概念就出来了，它们就是共享锁与排它锁。共享锁和排它锁是悲观锁的不同的实现，它俩都属于悲观锁的范畴。
+ 
+ # 6. 腾讯科恩实验室二面
+- static
+    - 给变量加上static关键字后，此变量变为全局变量，JVM在加载时会直接将此变量加载到方法区里而不是堆里
+static修饰成员方法最大的作用，就是可以使用"类名.方法名"的方式操作方法，避免了先要new出对象的繁琐和资源消耗
+- 深浅复制 
+    - 深浅拷贝 对于 数字和字符串 没区别，都是那一块地址。
+    - 直接复制 = 列表字典数组 还是一个地址
+    - 浅拷贝 copy 第一层改变，字典中的第二层没有变
+    - 深拷贝 不论多少层都变了。
+- b+数缺点
+    - B+树最大的性能问题在于会产生大量的随机IO，主要存在以下两种情况：
+        - 主键不是有序递增的，导致每次插入数据产生大量的数据迁移和空间碎片；
+        - 即使主键是有序递增的，大量写请求的分布仍是随机的；比如更新id=1，更新id=1000000，这样的随机io。用LSM树就可解决。
+- 介绍b+树 
+- 如何解决脏读  
+- 事务 
+- 如何设计数据库表
+- 数据隔离级别 各个级别都解决了什么问题 
+- 各种隔离级别解决什么问题
+    - mysql数据库定义了四种隔离级别：
+    serializable：可避免脏读、不可重复读、幻读情况的发生。
+    repeatable read：可以避免脏读、不可重复读情况的发生。
+    read committed：可以避免脏读情况发生。
+    read uncommitted：最低级别，都会发生。
+
+    - 如何解决这些问题：
+    脏读：写加排他锁，提交后再释放锁。
+    不可重复读，可读加共享锁，写加排他锁，都是事务结束后再释放锁。
+    幻读，可以读加间隙锁，锁定检索范围为只读。
+    
+    - 序列换：执行当前事务时，不允许其他事务执行。使得 事务串行执行。
+    可重复读：幻读      两次查询不一样，两次查询之间别人插入了数据，好像幻觉一样。
+    读已提交： 不可重复读     两次查询结果不一样，再两次查询之间 别的事务修改了数据
+    读未提交： 脏读        读到了别人没提交的数据
+- 事务
+数据库事务是指作为单个逻辑工作单元执行的一系列操作（SQL语句）。这些操作要么全部执行，要么全部不执行
+事务特性 有四种   原子性 一致性 隔离性 持久性
+启动 begin 或 start transacion   提交 commit
+- mvc模式
+模型（Model）：程序员编写程序应有的功能（实现算法等等）、数据库专家进行数据管理和数据库设计(可以实现具体的功能)；
+控制器（Controller）：负责转发请求，对请求进行处理；
+视图（View）：界面设计人员进行图形界面设计。
+
+# 7. 字节跳动1面  2.27日
+1. http可以用udp实现吗
+可以 但一般都用tcp 因为可靠，但也可以在udp基础上加一个可靠传输机制
+2. tcp udp区别 
+3. io多路复用啥意思 
+    - 如果一个I/O流进来，我们就开启一个进程处理这个I/O流。那么假设现在有一百万个I/O流进来，
+    那我们就需要开启一百万个进程一一对应处理这些I/O流（——这就是传统意义下的多进程并发处理）。
+    思考一下，一百万个进程，你的CPU占有率会多高，这个实现方式及其的不合理。
+    所以人们提出了I/O多路复用这个模型，一个线程，通过记录I/O流的状态来同时管理多个I/O，
+    可以提高服务器的吞吐能力。就像下面这张图的前半部分一样，中间的那条线就是我们的单个线程，
+    它通过记录传入的每一个I/O流的状态来同时管理多个IO。
+    我的理解，就是一个线程，不断的去遍历 io这个文件描述符的集合，如果有消息来了，就处理，没有就阻塞。
+4. redis zset底层 
+    - ![](figure/zset.png)
+    https://www.jianshu.com/p/c2841d65df4c 死磕跳表
+    zset 底层 是跳表
+    跳表具有如下性质：
+    (1) 由很多层结构组成
+    (2) 每一层都是一个有序的链表
+    (3) 最底层(Level 1)的链表包含所有元素
+    (4) 如果一个元素出现在 Level i 的链表中，则它在 Level i 之下的链表也都会出现。
+    (5) 每个节点包含两个指针，一个指向同一链表中的下一个元素，一个指向下面一层的元素。
+    - 4.1 skiplist与平衡树、哈希表的比较
+skiplist和各种平衡树（如AVL、红黑树等）的元素是有序排列的，而哈希表不是有序的。
+因此，在哈希表上只能做单个key的查找，不适宜做范围查找。所谓范围查找，指的是查找那些大小在指定的两个值之间的所有节点。
+在做范围查找的时候，平衡树比skiplist操作要复杂。在平衡树上，我们找到指定范围的小值之后，
+还需要以中序遍历的顺序继续寻找其它不超过大值的节点。如果不对平衡树进行一定的改造，
+这里的中序遍历并不容易实现。而在skiplist上进行范围查找就非常简单，只需要在找到小值之后，
+对第1层链表进行若干步的遍历就可以实现。
+平衡树的插入和删除操作可能引发子树的调整，逻辑复杂，而skiplist的插入和删除只需要修改相邻节点的指针，操作简单又快速。
+从内存占用上来说，skiplist比平衡树更灵活一些。一般来说，平衡树每个节点包含2个指针（分别指向左右子树），
+而skiplist每个节点包含的指针数目平均为1/(1-p)，具体取决于参数p的大小。如果像Redis里的实现一样，取p=1/4，那么平均每个节点包含1.33个指针，比平衡树更有优势。
+查找单个key，skiplist和平衡树的时间复杂度都为O(log n)，大体相当；而哈希表在保持较低的哈希值冲突概率的前提下，查找时间复杂度接近O(1)，性能更高一些。所以我们平常使用的各种Map或dictionary结构，大都是基于哈希表实现的。
+从算法实现难度上来比较，skiplist比平衡树要简单得多。
+实际上，Redis中sorted set的实现是这样的：
+当数据较少时，sorted set是由一个ziplist来实现的。
+当数据多的时候，sorted set是由一个dict + 一个skiplist来实现的。简单来讲，dict用来查询数据到分数的对应关系，而skiplist用来根据分数查询数据（可能是范围查找）。
+ziplist就是由很多数据项组成的一大块连续内存。由于sorted set的每一项元素都由数据和score组成，因此，当使用zadd命令插入一个(数据, score)对的时候，底层在相应的ziplist上就插入两个数据项：数据在前，score在后。
+ziplist的主要优点是节省内存，但它上面的查找操作只能按顺序查找（可以正序也可以倒序）。因此，sorted set的各个查询操作，就是在ziplist上从前向后（或从后向前）一步步查找，每一步前进两个数据项，跨域一个(数据, score)对。
+5. 三次握手 四次挥手 
+6. 进程通信方式 进程需要同步吗？ 会不会有线程同步问题？ 
+7. mysql底层 
+8. mysql优化 
+9. flask的middleware 
+10. 字典底层结构 
+11. 如何解决幻读 
+    - 当查询的索引含有唯一属性时，InnoDB会对Next-Key Lock进行优化，将其降级为Record Lock，即仅锁住索引本身，而不是范围。
+关键点在于对查询范围进行加锁，在另一个事务执行插入操作时是不被运行的，从而避免了幻读。
+select * from table where id>3 锁住的就是id=3这条记录以及id>3这个区间范围，锁住索引记录之间的范围，避免范围间插入记录，以避免产生幻影行记录。
+    
+    - 解决幻读又有多版本并发控制（MVCC）（快照读/一致性读）和next-key 锁 （当前读）
+普通的 select 就是快照读。
+select * from T where number = 1;
+原理：将历史数据存一份快照，所以其他事务增加与删除数据，对于当前事务来说是不可见的。
+next-key锁包含两部分
+记录锁（行锁）
+间隙锁
+记录锁是加在索引上的锁，间隙锁是加在索引之间的。
+select * from T where number = 1 for update;
+select * from T where number = 1 lock in share mode;
+　　1、数据库的两种读，每种读读的数据版本不一样，所以也称为MVCC，即多版本并发控制
+　　　　a) 快照读 
+　　　　　　select * from where xxx 这种形式的都是快照读。
+　　　　b) 当前读
+　　　　　　update , insert ,delete ,select xx from xx for update , in share mode 都是当前读
+　　　　　　当前读会等待，不会返回数据的历史版本
+12. 联合索引
+联合索引是什么
+对多个字段同时建立的索引(有顺序，ABC，ACB是完全不同的两种联合索引。)
+为什么要用
+以联合索引(a,b,c)为例
+建立这样的索引相当于建立了索引a、ab、abc三个索引。一个索引顶三个索引当然是好事，毕竟每多一个索引，都会增加写操作的开销和磁盘空间的开销。
+覆盖(动词)索引。同样的有联合索引（a,b,c），如果有如下的sql: select a,b,c from table where a=xxx and b = xxx。那么MySQL可以直接通过遍历索引取得数据，而无需读表，这减少了很多的随机io操作。减少io操作，特别的随机io其实是dba主要的优化策略。所以，在真正的实际应用中，覆盖索引是主要的提升性能的优化手段之一
+索引列越多，通过索引筛选出的数据越少。有1000W条数据的表，有如下sql:select * from table where a = 1 and b =2 and c = 3,假设每个条件可以筛选出10%的数据，如果只有单值索引，那么通过该索引能筛选出1000W*10%=100w 条数据，然后再回表从100w条数据中找到符合b=2 and c= 3的数据，然后再排序，再分页；如果是复合索引，通过索引筛选出1000w *10% *10% *10%=1w，然后再排序、分页，哪个更高效，一眼便知
+13. 聚簇索引、非聚簇索引、覆盖索引
+    - ![](figure/clusterindex.png)
+    - 1 聚簇索引：clustered index 其实数据存储结构，索引和记录（全部）内容保存同一个结构中。“聚簇”就是索引和记录紧密在一起，分开就不是聚簇索引了，所以一张表只能有唯一的聚簇索引。附带问，能有多少二级索引呢？为什么？
+    2 非聚簇索引：secondary index ，叶子节点保存了主键值，要定位记录还要再查一遍聚簇索引。
+    3 覆盖索引：覆盖索引是指索引的叶子节点已包含所有要查询的列，因此不需要访问表数据（回表~~有学个名词，查询聚簇索引）
+    （1）InnoDB的主键采用聚簇索引存储，使用的是B+Tree作为索引结构，但是叶子节点存储的是索引值和数据本身（注意和MyISAM的不同）。
+    （2）InnoDB的二级索引不使用聚蔟索引，叶子节点存储的是KEY字段加主键值。因此，通过二级索引查询首先查到是主键值，然后InnoDB再根据查到的主键值通过主键索引找到相应的数据块。
+    先通过普通索引定位到主键值id=5；
+    在通过聚集索引定位到行记录；
+    （3）MyISAM的主键索引和二级索引叶子节点存放的都是列值与行号的组合，叶子节点中保存的是数据的物理地址
+    （4）MyISAM引擎使用B+Tree作为索引结构，叶节点的data域存放的是数据记录的地址
+14. 如何解决脏读
+写时候加互斥锁 写完释放
+15. 为什么性别字段不适合简历索引
+假如你要从表的100万行数据中取几个数据，那么利用索引迅速定位，访问索引的这IO开销就非常值了。但如果你是从100万行数据中取50万行数据，就比如性别字段，那你相对需要访问50万次索引，再访问50万次表，加起来的开销并不会比直接对表进行一次完整扫描小。
+
+16. mysql锁
+https://blog.csdn.net/zcl_love_wx/article/details/83305645
+
+17. 事务日志
+    - Innodb主要是通过事务日志实现ACID特性
+事务日志包括：重做日志redo和回滚日志undo
+Redo记录的是已经全部完成的事务，就是执行了commit的事务，记录文件是ib_logfile0 ib_logfile1
+Undo记录的是已部分完成并且写入硬盘的未完成的事务，默认情况下回滚日志是记录下表空间中的（共享表空间或者独享表空间）
+一般情况下，mysql在崩溃之后，重启服务，innodb通过回滚日志undo将所有已完成并写入磁盘的未完成事务进行rollback，然后redo中的事务全部重新执行一遍即可恢复数据
+    - 事务日志可以帮助提高事务的效率。使用事务日志，存储引擎在修改表的数据时只需要修改其内存拷贝，再把该修改行为记录到持久在硬盘上的事务日志中，而不用每次都将修改的数据本身持久到磁盘。事务日志采用的是追加的方式，因此写日志的操作是磁盘上一小块区域内的顺序I/O，而不像随机I/O需要在磁盘的多个地方移动磁头，所以采用事务日志的方式相对来说要快得多。事务日志持久以后，内存中被修改的数据在后台可以慢慢地刷回到磁盘。目前大多数存储引擎都是这样实现的，我们通常称之为预写式日志（Write-Ahead Logging），修改数据需要写两次磁盘。
+如果数据的修改已经记录到事务日志并持久化，但数据本身还没有写回磁盘，此时系统崩溃，存储引擎在重启时能够自动恢复这部分修改的数据。
+InnoDB的MVCC,是通过在每行记录后面保存两个隐藏的列来实现的,这两个列，分别保存了这个行的创建时间，一个保存的是行的删除时间。这里存储的并不是实际的时间值,而是系统版本号(可以理解为事务的ID)，每开始一个新的事务，系统版本号就会自动递增，事务开始时刻的系统版本号会作为事务的ID
+InnoDB会根据以下两个条件检查每行记录:
+a.InnoDB只会查找版本早于当前事务版本的数据行(也就是,行的系统版本号小于或等于事务的系统版本号)，这样可以确保事务读取的行，要么是在事务开始前已经存在的，要么是事务自身插入或者修改过的.
+b.行的删除版本要么未定义,要么大于当前事务版本号,这可以确保事务读取到的行，在事务开始之前未被删除.
+只有a,b同时满足的记录，才能返回作为查询结果.
+补充：
+1.MVCC手段只适用于Msyql隔离级别中的读已提交（Read committed）和可重复读（Repeatable Read）.
+2.Read uncimmitted由于存在脏读，即能读到未提交事务的数据行，所以不适用MVCC.
+原因是MVCC的创建版本和删除版本只要在事务提交后才会产生。
+3.串行化由于是会对所涉及到的表加锁，并非行锁，自然也就不存在行的版本控制问题。
+4.通过以上总结，可知，MVCC主要作用于事务性的，有行锁控制的数据库模型。
+https://blog.csdn.net/whoamiyang/article/details/51901888?depth_1-utm_source=distribute.pc_relevant.none-task&utm_source=distribute.pc_relevant.none-task
+
+# 8. 字节二面 3.1日
+1. redis多消费者多生产者如何注意 
+当缓冲区已满时，生产者线程停止执行，放弃锁，使自己处于等状态，让其他线程执行；
+当缓冲区已空时，消费者线程停止执行，放弃锁，使自己处于等状态，让其他线程执行。
+当生产者向缓冲区放入一个产品时，向其他等待的线程发出可执行的通知，同时放弃锁，使自己处于等待状态；
+当消费者从缓冲区取出一个产品时，向其他等待的线程发出可执行的通知，同时放弃锁，使自己处于等待状态。
+redis 可以用 set delete key
+java里可以加锁 对消费者加锁
+2. mvvc实现 
+3. 乐观锁悲观锁 
+4. 持久化 
+5. 数据库的日志
+6. MyISAM与InnoDB 的区别
+    - ![](figure/innodbmyisam.jpg)
+    1. InnoDB支持事务，MyISAM不支持，对于InnoDB每一条SQL语言都默认封装成事务，自动提交，这样会影响速度，所以最好把多条SQL语言放在begin和commit之间，组成一个事务； 
+    2. InnoDB支持外键，而MyISAM不支持。对一个包含外键的InnoDB表转为MYISAM会失败； 
+    3. InnoDB是聚集索引，使用B+Tree作为索引结构，数据文件是和（主键）索引绑在一起的（表数据文件本身就是按B+Tree组织的一个索引结构），必须要有主键，通过主键索引效率很高。但是辅助索引需要两次查询，先查询到主键，然后再通过主键查询到数据。因此，主键不应该过大，因为主键太大，其他索引也都会很大
+     MyISAM是非聚集索引，也是使用B+Tree作为索引结构，索引和数据文件是分离的，索引保存的是数据文件的指针。主键索引和辅助索引是独立的。
+           也就是说：InnoDB的B+树主键索引的叶子节点就是数据文件，辅助索引的叶子节点是主键的值；而MyISAM的B+树主键索引和辅助索引的叶子节点都是数据文件的地址指针
+    4.  InnoDB不保存表的具体行数，执行select count(*) from table时需要全表扫描。而MyISAM用一个变量保存了整个表的行数，执行上述语句时只需要读出该变量即可，速度很快（注意不能加有任何WHERE条件）；
+    7. InnoDB支持表、行(默认)级锁，而MyISAM支持表级锁
+           InnoDB的行锁是实现在索引上的，而不是锁在物理行记录上。潜台词是，如果访问没有命中索引，也无法使用行锁，将要退化为表锁。
+        1. 是否要支持事务，如果要请选择innodb，如果不需要可以考虑MyISAM；
+        2. 如果表中绝大多数都只是读查询，可以考虑MyISAM，如果既有读也有写，请使用InnoDB。
+7. InnoDB为什么推荐使用自增ID作为主键？
+答：自增ID可以保证每次插入时B+索引是从右边扩展的，可以避免B+树和频繁合并和分裂（对比使用UUID）。如果使用字符串主键和随机主键，会使得数据随机插入，效率比较差。
+8. 为什么MyISAM会比Innodb的查询速度快?
+    - INNODB在做SELECT的时候，要维护的东西比MYISAM引擎多很多:
+    1）数据块，INNODB要缓存，MYISAM只缓存索引块，  这中间还有换进换出的减少；
+    2）innodb寻址要映射到块，再到行，MYISAM记录的直接是文件的OFFSET，定位比INNODB要快
+    3）INNODB还需要维护MVCC一致；虽然你的场景没有，但他还是需要去检查和维护
+    MVCC (Multi-Version Concurrency Control)多版本并发控制
+10.	是否需要建立索引
+11.	Innodb如何保证事务，事务的实现
+12.	Mysql性能优化
+https://zhuanlan.zhihu.com/p/48385127
+
