--- a/docs/牛客上的面经.md
+++ b/docs/牛客上的面经.md
@@ -495,3 +495,181 @@
     mq和rpc
     进程线程
     蛇形数组打印
+    
+    
+# 字节 1， 2面
+    作者：知更鸟女孩！！
+    链接：https://www.nowcoder.com/discuss/369905?type=2&order=3&pos=13&page=2
+    来源：牛客网
+    
+    一面 2020/2/21  40min左右
+    1、自我介绍
+    
+    2、项目介绍，挖掘项目
+    
+    3、讲一下单点登录
+    
+    4、乐观锁和悲观锁的区别，说一下使用场景
+    
+    5、如果在某一时刻有大量的缓存失效，有大量的请求落到数据库上，怎么处理
+    
+    6、讲一下分布式锁，如何实现
+    
+    7、更新数据的时候是先更新redis还是mysql
+    
+    8、编程题：写个单例模式懒加载，并解释
+    
+    9、volatile关键字，底层怎么实现的知道吗
+    
+    10、解释一下为什么网络较慢的时候TCP建立连接很慢
+    
+    11、讲一下拥塞控制
+    
+    12、IOC原理
+    
+    13、编程题：实现二叉树的之字型输出
+    
+    二面 2020/2/21 90min左右
+    1、自我介绍
+    
+    2、项目介绍，挖掘项目
+    
+    3、你觉得你在项目中解决的比较有成就感的问题是什么
+    
+    4、线程池了解吗
+    
+     
+    •  降低资源的消耗。线程本身是一种资源，创建和销毁线程会有CPU开销；创建的线程也会占用一定的内存。 
+    •  提高任务执行的响应速度。任务执行时，可以不必等到线程创建完之后再执行。 
+    •  提高线程的可管理性。线程不能无限制地创建，需要进行统一的分配、调优和监控。
+    
+    
+    5、介绍一下垃圾回收机制及垃圾回收算法
+    
+    Jvm内存主要 堆，方法区，线程私有（虚拟机栈，程序计数器）
+    垃圾回收主要作用在堆内存上
+    堆内存主要分为新生代，老年代。
+    新生代一般用标记-复制垃圾回收算法
+    老年代一般用标记-整理。
+    根据GC root引用链判断是否该对此对象进行垃圾回收。
+     
+    可作为GC Roots的对象包括下面几种:
+    虚拟机栈(栈帧中的本地变量表)中引用的对象
+    本地方法栈(Native方法)中引用的对象
+    方法区中类静态属性引用的对象
+    方法区中常量引用的对象。
+    
+    新生对象都放在Eden区，满了触发minor GC，放到From再放到To，这样来回的去复制。
+    年龄到达15左右，放到老年代中。
+    老年代满了 触发 Full Gc。
+    
+    
+    
+    
+    
+    
+    6、为什么垃圾回收回收的是堆，不用回收栈里面的
+    
+    7、目前垃圾回收的种类了解吗，比如G1…………
+    
+    8、内存泄漏的例子
+    
+    8、HashMap和LinkedHashMap的区别（说到了线程安全问题）
+    
+    9、有哪些线程安全的类（说到了HashTable）
+    
+    10、为什么HashTable是线程安全的
+    
+    9、HashMap底层原理
+    
+    10、说一下MVC模式
+    
+    11、编程题：
+    
+    有一个List<String> list =new ArrayList<String>();
+    
+    需要你写一个函数，可以将这个list中以"1_"开头的字符串删掉
+    
+    12、编程题：
+    
+    有一个整数数组 7，4，2，9，3，6，11，10
+    
+    求：第一个间断的数 5
+    
+    （间断数：比如上一个例子中出现了2，3，4，6，7，9，10，11），那么5就是第一个间断数
+    
+    要求：时间复杂度:o(N)，空间复杂度尽可能小
+    
+    13、智力题：一枚硬币，正面出现的概率是0.7，反面出现的概率是0.3，如何抛出硬币使甲乙都觉得公平
+    
+    
+    https://github.com/yuanguangxin/LeetCode/blob/master/Rocket.md  
+    常见面试题的github仓库
+
+ 
+# 大佬面经
+    作者：_XiaoTeng_
+    链接：https://www.nowcoder.com/discuss/29890
+    来源：牛客网
+    
+    算法和数据结构
+    数组、链表、二叉树、队列、栈的各种操作（性能，场景）
+    二分查找和各种变种的二分查找
+    各类排序算法以及复杂度分析（快排、归并、堆）
+    各类算法题（手写）
+    理解并可以分析时间和空间复杂度。
+    动态规划（笔试回回有。。）、贪心。
+    红黑树、AVL树、Hash树、Tire树、B树、B+树。
+    图算法（比较少，也就两个最短路径算法理解吧）
+    计算机网络
+    OSI7层模型（TCP4层）
+    每层的协议
+    url到页面的过程
+    HTTP
+    http/https 1.0、1.1、2.0
+    get/post 以及幂等性
+    http 协议头相关
+    网络攻击（CSRF、XSS）
+    TCP/IP
+    三次握手、四次挥手
+    拥塞控制（过程、阈值）
+    流量控制与滑动窗口
+    TCP与UDP比较
+    子网划分（一般只有笔试有）
+    DDos攻击
+    (B)IO/NIO/AIO
+    三者原理，各个语言是怎么实现的
+    Netty
+    Linux内核select poll epoll
+    数据库（最多的还是mysql，Nosql有redis）
+    索引（包括分类及优化方式，失效条件，底层结构）
+    sql语法（join，union，子查询，having，group by）
+    引擎对比（InnoDB，MyISAM）
+    数据库的锁（行锁，表锁，页级锁，意向锁，读锁，写锁，悲观锁，乐观锁，以及加锁的select sql方式）
+    隔离级别，依次解决的问题（脏读、不可重复读、幻读）
+    事务的ACID
+    B树、B+树
+    优化（explain，慢查询，show profile）
+    数据库的范式。
+    分库分表，主从复制，读写分离。
+    Nosql相关（redis和mem***d区别之类的，如果你熟悉redis，redis还有一堆要问的）
+    操作系统：
+    进程通信IPC（几种方式），与线程区别
+    OS的几种策略（页面置换，进程调度等，每个里面有几种算法）
+    互斥与死锁相关的
+    linux常用命令（问的时候都会给具体某一个场景）
+    Linux内核相关（select、poll、epoll）
+    编程语言（这里只说Java）：
+    把我之后的面经过一遍，Java感觉覆盖的就差不多了，不过下面还是分个类。
+    Java基础（面向对象、四个特性、重载重写、static和final等等很多东西）
+    集合（HashMap、ConcurrentHashMap、各种List，最好结合源码看）
+    并发和多线程（线程池、SYNC和Lock锁机制、线程通信、volatile、ThreadLocal、CyclicBarrier、
+    Atom包、CountDownLatch、AQS、CAS原理等等）
+    JVM（内存模型、GC垃圾回收，包括分代，GC算法，收集器、类加载和双亲委派、JVM调优，内存泄漏和内存溢出）
+    IO/NIO相关
+    反射和***、异常、Java8相关、序列化
+    设计模式（常用的，jdk中有的）
+    Web相关（servlet、cookie/session、Spring<AOP、IOC、MVC、事务、动态***>、Mybatis、Tomcat、Hibernate等）
+    看jdk源码
+    
+    https://www.nowcoder.com/discuss/29890 很多面经
