--- a/docs/c-7微服务架构和部署.md
+++ b/docs/c-7微服务架构和部署.md
@@ -1,3 +1,4 @@
+- 分布式 分散压力 。   微服务 分散能力
 # 1. RPC HTTP
 - 本质上，两者是可读性和效率之间的抉择，通用性和易用性之间的抉择。  http的restful架构可读性好，但是在调用服务过程中需要封装参数，效率低。 RPC要求在调用方中放置被调用的方法的接口。调用方只要调用了这些接口，就相当于调用了被调用方的实际方法，十分易用。于是，调用方可以像调用内部接口一样调用远程的方法，而不用封装参数名和参数值等操作。 RPC就是让一个应用调用另一个应用中方法的一种实现。
 # 2. RPC原理
@@ -42,3 +43,41 @@ Network Service：底层传输，可以是 TCP 或 HTTP。
 服务端存根(Server Stub)将结果通过网络发送至消费方。  
 客户端存根(Client Stub)接收到消息，并进行解码(反序列化)。  
 服务消费方得到最终结果。
+
+# 3. 限流算法
+- ![](figure/loutong.png)
+
+- ![](figure/lingpaitong.png)
+
+- 漏桶算法与令牌桶算法的区别在于，漏桶算法能够强行限制数据的传输速率，令牌桶算法能够在限制数据的平均传输速率的同时还允许某种程度的突发传输。
+
+# 4. 分布式ID
+- 雪花算法 slowflake
+
+- ![](figure/snowflake.png)
+
+# 5. 网关
+- 微服务下一个系统被拆分为多个服务，但是像 安全认证，流量控制，日志，监控等功能是每个服务都需要的，没有网关的话，我们就需要在每个服务中单独实现，这使得我们做了很多重复的事情并且没有一个全局的视图来统一管理这些功能。
+综上：一般情况下，网关一般都会提供请求转发、安全认证（身份/权限认证）、流量控制、负载均衡、容灾、日志、监控这些功能。上面介绍了这么多功能实际上网关主要做了一件事情：请求过滤 。权限校验、流量控制这些都可以通过过滤器实现，请求转也是通过过滤器实现的。
+API网关可以看做系统与外界联通的入口，我们可以在网关进行处理一些非业务逻辑的逻辑，比如权限验证，监控，缓存，请求路由等等。
+
+- ![](figure/gateway.png)
+
+# 6. es
+
+- 反向索引又叫倒排索引，是根据文章内容中的关键字建立索引。
+- 搜索引擎原理就是建立反向索引。
+- Elasticsearch 在 Lucene 的基础上进行封装，实现了分布式搜索引擎。
+- Elasticsearch 中的索引、类型和文档的概念比较重要，类似于 MySQL 中的数据库、表和行。
+- Elasticsearch 也是 Master-slave 架构，也实现了数据的分片和备份。
+- Elasticsearch 一个典型应用就是 ELK 日志分析系统。
+
+# 7. 序列化，反序列化
+- 互联网的产生带来了机器间通讯的需求，而互联通讯的双方需要采用约定的协议，序列化和反序列化属于通讯协议的一部分。通讯协议往往采用分层模型，不同模型每层的功能定义以及颗粒度不同，例如：TCP/IP协议是一个四层协议，而OSI模型却是七层协议模型。在OSI七层协议模型中展现层（Presentation Layer）的主要功能是把应用层的对象转换成一段连续的二进制串，或者反过来，把二进制串转换成应用层的对象--这两个功能就是序列化和反序列化。
+一般而言，TCP/IP协议的应用层对应与OSI七层协议模型的应用层，展示层和会话层，所以序列化协议属于TCP/IP协议应用层的一部分。protobuf thrift json啥都 都是序列化协议。
+我们单方面的只把对象转成字节数组还不行，因为没有规则的字节数组我们是没办法把对象的本来面目还原回来的，所以我们必须在把对象转成字节数组的时候就制定一种规则（序列化），那么我们从IO流里面读出数据的时候再以这种规则把对象还原回来（反序列化）。凡是需要进行“跨平台存储”和”网络传输”的数据，都需要进行序列化。 rpc很重要的一步就是序列化哟。
+
+# 8. docker简介
+![](figure/docker.png)
+我所理解的docker-compose是编排容器的。例如，你有一个php镜像，一个mysql镜像，一个nginx镜像。如果没有docker-compose，那么每次启动的时候，你需要敲各个容器的启动参数，环境变量，容器命名，指定不同容器的链接参数等等一系列的操作，相当繁琐。而用了docker-composer之后，你就可以把这些命令一次性写在docker-composer.yml文件中，以后每次启动这一整个环境（含3个容器）的时候，你只要敲一个docker-composer up命令就ok了。
+而dockerfile的作用是从无到有的构建镜像。
