--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -78,3 +78,33 @@
     这个时候取0-20就可以等概率的区分，rand7的每个数字在这其中出现了3次，概率相等。
 
 - https://www.cnblogs.com/cangqinglang/p/13201388.html 很全的输入url后怎么到服务端的
+
+- websocket
+    - 其实就是主动推送啦  比如有个主播开播了，就可以用websocket主动推送给订阅的客户呀。
+    它也是一种协议
+    http中请记住 Request = Response ， 在HTTP中永远是这样，也就是说一个request只能有一个response。而且这个response也是被动的，不能主动发起。
+    而websocket是可以主动去发起消息的。
+    ajax轮询 的原理非常简单，让浏览器隔个几秒就发送一次请求，询问服务器是否有新信息。
+    long poll 其实原理跟 ajax轮询 差不多，都是采用轮询的方式，不过采取的是阻塞模型（一直打电话，没收到就不挂电话），也就是说，客户端发起连接后，如果没消息，就一直不返回Response给客户端。直到有消息才返回，返回完之后，客户端再次建立连接，周而复始。
+    
+    - http long poll，或者ajax轮询不都可以实现实时信息传递么。
+    ajax轮询 需要服务器有很快的处理速度和资源。（速度）
+    long poll 需要有很高的并发，也就是说同时接待客户的能力。（场地大小）
+    Websocket只需要一次HTTP握手，所以说整个通讯过程是建立在一次连接/状态中，也就避免了HTTP的非状态性，服务端会一直知道你的信息，直到你关闭请求，这样就解决了接线员要反复解析HTTP协议，还要查看identity info的信息。
+    同时由客户主动询问，转换为服务器（推送）有信息的时候就发送（当然客户端还是等主动发送信息过来的。。），没有信息的时候就交给接线员（Nginx），不需要占用本身速度就慢的客服（Handler）了
+    https://www.zhihu.com/question/20215561
+    
+- nginx
+    - ![](figure/nginx1.png)
+    
+    - ![](figure/nginx2.png)
+    
+    - ![](figure/nginx3.png)
+    
+- xss攻击和sql攻击
+
+    - ![](figure/xsssql.png)
+    
+- 为什么线程切换会导致用户态和内核态的切换？
+    - 因为线程的调度是在内核态运行的，而线程中的代码是在用户态运行
+
