面经+Lock+个人优点缺点

--- a/docs/z1-场景题.md
+++ b/docs/z1-场景题.md
@@ -33,3 +33,12 @@ https://blog.csdn.net/MOU_IT/article/details/88586193
 1.	内存放得下 直接堆或者快排
 2.	内存放不下 数的范围是0-2^32-1 40亿  可以用一个2^32 40亿个桶来保存 累加到50亿
 3.	如果4GB都没有  那就多分几个范围内的桶 每个桶保存10个数 那就有4亿个区间. 整个过程需要遍历100亿个数两次，第一次确定第50亿个数所落在的索引区间，第二次确定第50亿个数所落在的索引。区间大小是一个可以优化的值，优化之后可以使得I/O的次数最少。
+
+# 4. 说一下你的优点缺点？
+- 优点
+    - 目标明确，规划清晰，脚踏实地 ---- 研1，深度学习 + 互联网， 到现在，广度深度积累
+    - 学习能力强 ---- 两篇论文，快速找到新鲜事务的规律，和资深的人探讨新的方向，找到灵感。
+    
+- 缺点
+    - 业务理解：需要扎根于一个业务方向，对其有深刻的理解
+    - 架构能力：需要1-2年 提升自己的架构能力，广度深度有更进一步的提高，可以独立的去设计一个产品的架构以及业务方向。
