--- a/docs/牛客上的面经.md
+++ b/docs/牛客上的面经.md
@@ -673,3 +673,112 @@
     看jdk源码
     
     https://www.nowcoder.com/discuss/29890 很多面经
+    
+# 腾讯1面 8.20
+    作者：DreamCats
+    链接：https://www.nowcoder.com/discuss/483904?type=2&order=3&pos=3&page=1&channel=666&source_id=discuss_tag
+    来源：牛客网
+    
+    hashmap的底层结构
+    hashmap的一些参数介绍
+    hashmap在1.8版改进的地方
+    hashmap什么情况下查询复杂度高
+    红黑树的特点
+    红黑树的复杂度
+    并发安全的map类
+    都有哪些排序算法
+    介绍快排
+    介绍堆排
+    手写单例
+    谈一谈volatile
+    谈一谈synchroinzed
+    mutex如何实现的？过程是什么？
+    如果是你，你如何实现mutex？
+    谈一谈gc
+    JVM如何调优
+    cap是什么
+    zab算法
+    实现paxos算法的工程还有哪个？raft...
+    哪些中间件用了raft？
+    为什么zk不用raft？
+    paxos的有哪些缺点
+    mongodb的底层结构是什么
+    mysql宕机了，数据怎么办？
+    两个客户端去修改同一个id的字段，mysql会发生什么？
+    写一道题：股票
+    select和epoll的区别
+    Redis实现分布式锁的过程
+    写一道题：翻转序列，求前n项和（我用了个简单方法，但复杂度高，后来面试管提示我用数学方法，他挺好的，就是我太笨了。）
+    线程和协程的区别是什么？
+    如果是你，你如何设计协程
+       https://www.sohu.com/a/237171690_465221
+    反问
+
+# 美团北斗
+    作者：sdn
+    链接：https://www.nowcoder.com/discuss/483990?type=2&order=3&pos=3&page=1&channel=666&source_id=discuss_tag
+    来源：牛客网
+    
+    一面 19:11（1h）
+    秋招第一试，面试时间还搞错了，慌得一批，自我介绍都没介绍完，还好面试官人比较和善，接着介绍了一下岗位
+    5min20s:
+    （项目里提到了io多路复用）
+    
+    io模型有哪几种 介绍一下 （阻塞、非阻塞、同步、异步 select poll epoll）
+    数据准备是谁去做的（内核）
+    nginx为什么高并发 并发模型（多进程+io多路复用）
+    epoll相比select做了哪些优化(...)
+    12min:
+    
+    索引怎么优化(有个项目提到了索引优化)
+    索引匹配原则、最左匹配原则举例、索引存储结构、为什么要最左匹配
+    聚集索引非聚集索引、建索引的原则和注意事项
+    分库分表了解吗、有什么优缺点
+    19min50s:
+    
+    针对实习项目里的一些问题:双机房缓存一致性怎么实现的......
+    redis淘汰策略
+    25min30s:
+    
+    项目为什么消息队列用rabbitmq 不用redis（因为简单）
+    公司微服务用的什么框架（简历说了了解微服务）
+    微服务框架怎么实现异步调用（回调）
+    30min30s：算法
+    
+    复原ip（leetcode dfs）
+    正整数数组中，选取一组不相邻的数字，求最大和（动态规划）
+    面试官出题之前还先征求了一下我的意见，我暗示了一下自己算法很菜，他说他还是喜欢问算法题...
+    还是找实习的时候刷了些题，过这么久真的都忘光了...
+    第一题还是之前字节面试的算法题...
+    反正都没有直接给出答案，面试官比较好，会跟我说思路，然后我跟着把大概实现写出来，看上去他还比较满意，但是..
+    菜鸡抹泪..
+    1h
+    面试官说还挺满意，可以接着二面，会跟二面面试官推荐下我哈哈
+    二面 20:18（1h12min）
+    
+    自我介绍
+    3min：
+    
+    实习做了什么
+    python和go的区别
+    13min：
+    
+    说一下事务 四个特性 隔离级别 默认隔离级别 MVCC是什么 干什么用了mysql
+    分库分表了解吗（都喜欢问这个，还好实习组里有人在做，稍微了解了一下，有点话说）
+    19min30s:
+    
+    七层网络模型&五层 TCP/UDP区别
+    TCP怎么实现可靠性 怎么保证有序性、完整性
+    TCP、UDP应用场景
+    HTTP说一下（我说了好久快10min，面试官也没有打断我，我都觉得自己在水时间，最后不想往下说了..）
+    32min：
+    
+    死锁 条件
+    35min:算法
+    
+    实现一个集合 提供随机取值的操作
+    两个栈实现最小栈
+    算法不难，但是面试官还是问了挺久，细节部分也有些坑，
+    60min：
+    
+    问了一些岗位相关问题
