--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -60,9 +60,14 @@
     主键索引创建的时候已经是唯一性索引了
     
 
+- TCP，UDP能否使用同一个端口？
+    - 由于TCP/IP传输层的两个协议TCP和UDP是完全独立的两个软件模块，因此各自的端口号也相互独立，如TCP有一个255号端口，UDP也可以有一个255号端口，二者并不冲突。 
+
 - 单机限流，分布式限流？？？
 
-- synchronized和lock区别，lock的过程，在没获取到锁的时候是什么状态？？
+- synchronized和lock（ReentrantLock）区别，lock的过程，在没获取到锁的时候是什么状态？？
+
+- https://www.nowcoder.com/discuss/483320 秒杀问题记录
 
 - rand5生成rand7
     - num=5*（rand5-1）+rand5-1
