--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -66,6 +66,7 @@
 - 单机限流，分布式限流？？？
 
 - synchronized和lock（ReentrantLock）区别，lock的过程，在没获取到锁的时候是什么状态？？
+    - lock的时候，如果锁被占用则一直等待
 
 - https://www.nowcoder.com/discuss/483320 秒杀问题记录
 
@@ -112,4 +113,22 @@
     
 - 为什么线程切换会导致用户态和内核态的切换？
     - 因为线程的调度是在内核态运行的，而线程中的代码是在用户态运行
+    
+- Redis的过期时间怎么实现的?
+    - 在redis的数据库中，redisDb结构中的expires字典中保存了数据库中所有键的过期时间，所以叫过期字典。
+    - 过期字典的key是一个指针，指向键空间的某个键对象（就是数据库键）
+    - 过期字典的value是一个long类型的整数，这个整数保存了键所指向的数据库键的过期时间，一个毫秒精度的UNIX时间戳
+    - 判断key是否存在于过期字典中
+    - 通过过期字典拿到key的过期时间，判断当前UNIX时间戳是否大于key时间
+    
+- Cache和Buffer的区别
+    - Cache：缓存区，是高速缓存，是位于CPU和主内存之间的容量较小但速度很快的存储器，因为CPU的速度远远高于主内存的速度，CPU从内存中读取数据需等待很长的时间，而  Cache保存着CPU刚用过的数据或循环使用的部分数据，这时从Cache中读取数据会更快，减少了CPU等待的时间，提高了系统的性能。
+    - Cache并不是缓存文件的，而是缓存块的(块是I/O读写最小的单元)；Cache一般会用在I/O请求上，如果多个进程要访问某个文件，可以把此文件读入Cache中，这样下一个进程获取CPU控制权并访问此文件直接从Cache读取，提高系统性能。
+    - Buffer：缓冲区，用于存储速度不同步的设备或优先级不同的设备之间传输数据；通过buffer可以减少进程间通信需要等待的时间，当存储速度快的设备与存储速度慢的设备进行通信时，存储慢的数据先把数据存放到buffer，达到一定程度存储快的设备再读取buffer的数据，在此期间存储快的设备CPU可以干其他的事情。
+    - Buffer：一般是用在写入磁盘的，例如：某个进程要求多个字段被读入，当所有要求的字段被读入之前已经读入的字段会先放到buffer中。
 
+- 死锁会导致cpu占用高吗？
+    - 一般死锁 不会，只是阻塞在那，并不占用cpu
+ 
+- 什么情况会导致cpu占用过高？
+    - 除了计算密集型之外，while死循环
